%% GENERATED by scripts/gen_diagrams.py - do not edit by hand.
%% Source of truth: the same TRANSITIONS table, minus ABANDONED and FAILED
stateDiagram-v2
    direction TB
    [*] --> CONNECTING
    [*] --> INTENT_CREATED
    INTENT_CREATED --> CONNECTING
    CONNECTING --> IVR
    CONNECTING --> QUEUED
    IVR --> QUEUED
    IVR --> VOICEMAIL
    QUEUED --> INTAKE_ACTIVE
    QUEUED --> MATCHED
    QUEUED --> VOICEMAIL
    INTAKE_ACTIVE --> INTAKE_COMPLETE
    INTAKE_ACTIVE --> MATCHED
    INTAKE_COMPLETE --> MATCHED
    MATCHED --> MATCHED : re-match (RONA)
    MATCHED --> OFFERED
    MATCHED --> QUEUED
    OFFERED --> IN_CALL
    OFFERED --> MATCHED
    IN_CALL --> TRANSFERRED
    IN_CALL --> WRAP_UP
    WRAP_UP --> CLOSED
    CLOSED --> [*]
    TRANSFERRED --> [*]
    VOICEMAIL --> [*]

    note left of QUEUED
        ABANDONED, FAILED are omitted here.
        Nearly every state can reach them,
        and drawing that hides the real flow.
        See state_machine.svg for the full table.
    end note

    note right of INTAKE_ACTIVE
        QUEUED and INTAKE_ACTIVE can BOTH
        jump straight to MATCHED: leaving the
        queue depends on an agent being free,
        never on intake having finished (D12).
    end note

    note right of OFFERED
        OFFERED --> MATCHED is RONA: a declined
        or timed-out offer re-matches someone
        else instead of stranding the caller (D33).
    end note
